--- a/src/skydrop/view/RatingAndReview.form
+++ b/src/skydrop/view/RatingAndReview.form
@@ -450,27 +450,31 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
-                  <Component id="jLabel3" min="-2" pref="101" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="94" max="-2" attributes="0"/>
-              </Group>
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                   <Component id="jPanel9" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
+                          <Group type="103" groupAlignment="1" attributes="0">
+                              <Component id="Namelabel1" alignment="0" max="32767" attributes="0"/>
+                              <Group type="102" alignment="1" attributes="0">
+                                  <EmptySpace pref="148" max="32767" attributes="0"/>
+                                  <Component id="jLabel3" min="-2" pref="101" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <EmptySpace min="-2" pref="94" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="CommentArea2" alignment="0" pref="317" max="32767" attributes="0"/>
                               <Component id="addComment" alignment="0" max="32767" attributes="0"/>
                               <Group type="102" attributes="0">
-                                  <Group type="103" groupAlignment="0" attributes="0">
-                                      <Component id="Namelabel1" min="-2" pref="37" max="-2" attributes="0"/>
-                                      <Component id="Namelabel2" alignment="0" min="-2" pref="37" max="-2" attributes="0"/>
-                                      <Component id="Namelabel3" alignment="0" min="-2" pref="37" max="-2" attributes="0"/>
-                                      <Component id="Namelabel4" alignment="0" min="-2" pref="54" max="-2" attributes="0"/>
-                                      <Component id="CommentArea3" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Component id="CommentArea3" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="Namelabel2" alignment="0" min="-2" pref="242" max="-2" attributes="0"/>
+                                      <Component id="Namelabel3" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="Namelabel4" alignment="0" max="32767" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
