--- a/src/skydrop/view/RatingAndReview.form
+++ b/src/skydrop/view/RatingAndReview.form
@@ -404,6 +404,14 @@
         <Property name="text" type="java.lang.String" value="jButton4"/>
       </Properties>
     </Component>
+    <Component class="javax.swing.JLabel" name="Namelabel4">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Segoe UI" size="14" style="1"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="David"/>
+      </Properties>
+    </Component>
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
@@ -474,7 +482,6 @@
                                       <Component id="CommentArea3" alignment="0" max="32767" attributes="0"/>
                                       <Component id="Namelabel2" alignment="0" min="-2" pref="242" max="-2" attributes="0"/>
                                       <Component id="Namelabel3" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="Namelabel4" alignment="0" max="32767" attributes="0"/>
                                   </Group>
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
@@ -487,6 +494,7 @@
                                   <Component id="NameField" min="-2" pref="243" max="-2" attributes="0"/>
                               </Group>
                               <Component id="jScrollPane1" max="32767" attributes="0"/>
+                              <Component id="Namelabel7" alignment="0" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                       </Group>
@@ -517,11 +525,11 @@
                           <Component id="Namelabel3" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="CommentArea3" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+                          <Component id="Namelabel7" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="Namelabel4" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
                           <Component id="CommentArea4" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="33" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Component id="Namelabel6" min="-2" pref="20" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jScrollPane1" min="-2" pref="60" max="-2" attributes="0"/>
@@ -588,14 +596,6 @@
               <Font name="Segoe UI" size="14" style="0"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Great Product! I higly recommend it."/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JLabel" name="Namelabel4">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Segoe UI" size="14" style="1"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="David"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="CommentArea3">
@@ -689,6 +689,14 @@
               <Font name="Segoe UI" size="14" style="1"/>
             </Property>
             <Property name="text" type="java.lang.String" value="New Comment here."/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JLabel" name="Namelabel7">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Segoe UI" size="14" style="1"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Daniel"/>
           </Properties>
         </Component>
       </SubComponents>
