--- a/src/skydrop/view/UserView.form
+++ b/src/skydrop/view/UserView.form
@@ -565,6 +565,9 @@
             </Property>
             <Property name="text" type="java.lang.String" value="log out"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="logoutButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="EditButton1">
           <Properties>
